<resources>
    <string name="loginHint">Логин</string>
    <string name="passwordHint">Пароль</string>
    <string name="registrationButton">Регистрация</string>
    <string name="loginButton">Войти</string>
    <string name="logoutButton">Разлогиниться</string>

    <string name="preGameHeader">Расположение кораблей</string>
    <string name="inputCoordinatesHeader">Введите координаты</string>
    <string name="x1Hint" translatable="false">x1</string>
    <string name="x2Hint" translatable="false">x2</string>
    <string name="y1Hint" translatable="false">y1</string>
    <string name="y2Hint" translatable="false">y2</string>
    <string name="addButton">Добавить</string>
    <string name="deleteButton">Удалить</string>
    <string name="shipListHeader">Список кораблей</string>
    <string name="readyButton">Готово</string>
    <string name="backButton">Назад</string>


    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="localhostAddress" translatable="false">192.168.1.101:8080</string>
    <string name="unexpectedError">Что-то пошло не так</string>
    <string name="lostConnection">Потеряно соединение с сервером</string>
    <string name="app_name">Морской Бой</string>
    <string name="game">Игра</string>
    <string name="ship" translatable="false">X</string>
    <string name="miss" translatable="false">O</string>
    <string name="profileName">ПРОФИЛЬ</string>
    <string name="exit">ВЫЙТИ</string>
    <string name="ship_failed_count" translatable="false">0</string>
    <string name="ship_failed">Кораблей потеряно</string>
    <string name="ship_killed_count" translatable="false">0</string>
    <string name="ship_killed">Кораблей убито</string>
    <string name="profile_name">Nickname</string>
    <string name="Victory">Побед</string>
    <string name="victory_count" translatable="false">0</string>
    <string name="Fail">Поражений</string>
    <string name="faIL_count" translatable="false">0</string>
    <string name="currentUsername" translatable="false">currentUsername</string>
    <string name="noUser" translatable="false">NoUser</string>
    <string name="change_language">сменить язык</string>
    <string name="SkipButton">Пропустить</string>
    <string name="Clear">Очистить</string>
    <string name="Auto">Авто</string>

    <string name="validationUsernameMessage">Некорректное имя пользователя</string>
    <string name="validationPasswordMessage">Некорректный пароль</string>
    <string name="visible" translatable="false">isVisible</string>
    <string name="errorMessage" translatable="false">errorMessage</string>

    <string name="shipTooCloseMessage" >Слишком близко к другим</string>
    <string name="shipOutOfBoardMessage">Корабль вне поля</string>
    <string name="wrongShipsCountMessage">Неверное количество кораблей</string>
    <string name="wrongShipsCountForTypeMessage">Неверное количество кораблей нужного типа</string>
    <string name="fullShipCollectionMessage">Набор кораблей уже полон</string>
    <string name="fullShipTypeMessage">Кораблей данного типа уже достаточно</string>
    <string name="unexpectedShipTypeMessage">Корабль не подходящего типа</string>
    <string name="noEnoughSpaceMessage">Недостаточно места</string>
    <string name="shipAlreadyExistMessage">Корабль уже существует</string>
    <string name="shipNotExistMessage">Такого корабля нету</string>

    <string name="YourTurn">Сейчас Ваш ход</string>
    <string name="BotTurn">Сейчас ход бота</string>
    <string name="FoundCell">Вы потопили вражеский корабль</string>
    <string name="FoundShip">вы попали по вражескому кораблю</string>
    <string name="Miss">Мимо</string>
    <string name="YouWin">Поздравляем! Вы выиграли!</string>
    <string name="YouLose">К сожалению:( Вы проиграли</string>
    <string name="UserIsNotLoggedIn">Пользователь не залогинен</string>
    <string name="dataSaved">Данные игры сохранены</string>
</resources>
