<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileFragment">

    <TextView
        android:id="@+id/shipsLostCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_failed_count"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/profile_exit"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/shipsDestroyedCount" />

    <TextView
        android:id="@+id/shipsDestroyedCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ship_killed_count"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/shipsLostCount"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/defeatsCount" />

    <TextView
        android:id="@+id/defeatsCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/faIL_count"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/shipsDestroyedCount"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/victoriesCount" />

    <TextView
        android:id="@+id/victoriesCount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/victory_count"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/defeatsCount"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/Nickname" />

    <TextView
        android:id="@+id/textShipsLost"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/profile_exit"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textShipsDestroyed"
        tools:background="@color/blue_500"
        tools:text="@string/ship_failed"
        tools:textColor="@color/white"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textShipsDestroyed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/blue_500"
        android:text="@string/ship_killed"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textShipsLost"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textDefeats"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/Nickname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_name"
        android:textAlignment="center"
        android:textColor="@color/blue_500"
        android:textSize="34sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="@+id/guideline3" />

    <TextView
        android:id="@+id/textVictories"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:text="@string/Victory"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textDefeats"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/Nickname"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textDefeats"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:text="@string/Fail"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:visibility="visible"
        app:layout_constraintBottom_toTopOf="@+id/textShipsDestroyed"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/textVictories"
        tools:visibility="visible" />

    <Button
        android:id="@+id/profile_exit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/backButton"
        app:layout_constraintBottom_toTopOf="@+id/guideline4"
        app:layout_constraintEnd_toStartOf="@+id/guideline2"
        app:layout_constraintHorizontal_bias="0.496"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <androidx.constraintlayout.widget.Barrier
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="left"
        tools:layout_editor_absoluteX="411dp"
        tools:layout_editor_absoluteY="161dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="10dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_begin="35dp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_end="16dp" />

</androidx.constraintlayout.widget.ConstraintLayout>