<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PreGameFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/pre_game__navigation_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/pre_game__form"
        app:layout_constraintVertical_chainStyle="spread_inside"
        android:layout_marginVertical="5dp">
        <Button
            android:id="@+id/pre_game__back_button"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/backButton"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginHorizontal="10dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/pre_game__form"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/pre_game__navigation_bar"
        app:layout_constraintBottom_toTopOf="@id/pre_game__ready_button"
        app:cardCornerRadius="5dp"
        android:layout_marginHorizontal="10dp"
        app:cardBackgroundColor="@color/white"
        >


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Button
                android:id="@+id/pre_game__clear_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Clear"
                android:backgroundTint="?attr/colorSecondary"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_margin="5dp"/>

            <Button
                android:id="@+id/pre_game__auto_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Auto"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_margin="5dp"/>

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/pre_game__form__top_button_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="bottom"
                app:constraint_referenced_ids="pre_game__clear_button, pre_game__auto_button"
                />

            <GridLayout
                android:id="@+id/pre_game__grid"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@id/pre_game__form__top_button_barrier"
                app:layout_constraintBottom_toTopOf="@id/pre_game__form__button_barrier"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                android:orientation="vertical"
                android:background="@color/blue_500">
            </GridLayout>

            <Button
                android:id="@+id/pre_game__form__delete_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.45"
                app:layout_constraintWidth_max="320dp"
                app:layout_constrainedWidth="true"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@id/pre_game__form__add_button"
                app:layout_constraintHorizontal_chainStyle="spread"
                android:layout_margin="5dp"
                android:textSize="15sp"

                android:backgroundTint="?attr/colorSecondary"
                android:text="@string/deleteButton"
                />

            <Button
                android:id="@+id/pre_game__form__add_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintWidth_percent="0.45"
                app:layout_constraintWidth_max="320dp"
                app:layout_constrainedWidth="true"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintLeft_toRightOf="@id/pre_game__form__delete_button"
                android:layout_margin="5dp"
                android:textSize="15sp"

                android:text="@string/addButton"
                />

            <androidx.constraintlayout.widget.Barrier
                android:id="@+id/pre_game__form__button_barrier"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:barrierDirection="top"
                app:constraint_referenced_ids="pre_game__form__delete_button, pre_game__form__add_button"
                />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/pre_game__ready_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintWidth_max="640dp"

        app:layout_constraintTop_toBottomOf="@id/pre_game__form"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="10dp"
        android:textSize="15sp"
        android:text="@string/readyButton"
        />

</androidx.constraintlayout.widget.ConstraintLayout>